--- a/lipidomics_analysis_pipeline.Rmd
+++ b/lipidomics_analysis_pipeline.Rmd
@@ -939,7 +939,7 @@ common_mcm<-Reduce(intersect, list(DEL_N215_mcm, DEL_N253_mcm, DEL_all_mcm))
 ### Eto & MCM in N215
 ```{r venn eto mcm n215}
 venn_eto_mcm_n215 <- ggvenn(data = list(N215_eto = DEL_N215_eto, N215_mcm = DEL_N215_mcm))
-venn_eto
+venn_eto_mcm_n215
 ```
 
 ```{r common eto mcm in N215}
@@ -951,7 +951,7 @@ print(paste0("Common Lipids between MCM and Eto in N215 are ",paste(common_eto_m
 ### Eto & MCM in N253
 ```{r venn eto mcm n253}
 venn_eto_mcm_n253 <- ggvenn(data = list(N253_eto = DEL_N253_eto, N253_mcm = DEL_N253_mcm))
-venn_eto
+venn_eto_mcm_n253
 ```
 
 ```{r common eto mcm in N253}
@@ -1050,88 +1050,6 @@ heatmaply(diffLipids_eto_all,
 
 ```
 
-## MCM vs Control All Cell Lines
-
-```{r heatmap DEL mcm all, results='hide'}
-myheatcolors <- rev(brewer.pal(name="RdBu", n=11))
-clustRows <- hclust(as.dist(1-cor(t(diffLipids_mcm_all), method="pearson")), method="complete") 
-
-clustColumns <- hclust(as.dist(1-cor(diffLipids_mcm_all, method="spearman")), method="complete")
-module.assign <- cutree(clustRows, k=2) #Important parametre
-module.color <- rainbow(length(unique(module.assign)), start=0.1, end=0.9) 
-module.color <- module.color[as.vector(module.assign)] 
-
-module.assign_col<-cutree(clustColumns, k=2) #Important parametre
-module.color_col <- rainbow(length(unique(module.assign_col)), start=0.1, end=0.9) 
-module.color_col <- module.color_col[as.vector(module.assign_col)]
-
-svg(file = "plots/heatmap_DEL_mcm_vs_control_alllines.svg")
-heatmap.2(diffLipids_mcm_all, 
-          Rowv = as.dendrogram(clustRows), 
-          Colv = as.dendrogram(clustColumns),
-          RowSideColors = module.color,
-          ColSideColors = module.color_col,
-          col = myheatcolors, 
-          scale = "row", 
-          labRow = NA,
-          density.info = "none", 
-          trace = "none",  
-          cexRow = 0.8,  # Adjust row label size
-          cexCol = 0.8,  # Adjust column label size
-          margins = c(10, 10),  # Increase margin size
-          keysize = 1.2,  # Adjust size of the color key
-          key.title = NA,  # Remove color key title
-          key.ylab = NULL,  # Remove color key y-axis label
-          key.xlab = "Z-Score",  # Add x-axis label to the color key
-          main = "Lipid Differences MCM vs Control All Lines",  # Add a main title
-          xlab = "Samples",  # Label for x-axis
-          ylab = "Lipids",  # Label for y-axis
-          mar = c(5, 4),  # Adjust plot margins
-          srtCol = 45,  # Rotate column labels for better readability
-          dendrogram = "both"  # Show both row and column dendrograms
-)
-dev.off()
-
-png(file = "plots/heatmap_DEL_mcm_vs_control_alllines.png")
-heatmap.2(diffLipids_mcm_all, 
-          Rowv = as.dendrogram(clustRows), 
-          Colv = as.dendrogram(clustColumns),
-          RowSideColors = module.color,
-          ColSideColors = module.color_col,
-          col = myheatcolors, 
-          scale = "row", 
-          labRow = NA,
-          density.info = "none", 
-          trace = "none",  
-          cexRow = 0.8,  # Adjust row label size
-          cexCol = 0.8,  # Adjust column label size
-          margins = c(10, 10),  # Increase margin size
-          keysize = 1.2,  # Adjust size of the color key
-          key.title = NA,  # Remove color key title
-          key.ylab = NULL,  # Remove color key y-axis label
-          key.xlab = "Z-Score",  # Add x-axis label to the color key
-          main = "Lipid Differences MCM vs Control All Lines",  # Add a main title
-          xlab = "Samples",  # Label for x-axis
-          ylab = "Lipids",  # Label for y-axis
-          mar = c(5, 4),  # Adjust plot margins
-          srtCol = 45,  # Rotate column labels for better readability
-          dendrogram = "both"  # Show both row and column dendrograms
-)
-dev.off()
-```
-
-```{r heatmaply DELs mcm all}
-
-heatmaply(diffLipids_mcm_all, 
-          colors = myheatcolors,
-          Rowv=as.dendrogram(clustRows),
-          RowSideColors=module.color,
-          ColSideColors = module.color_col,
-          showticklabels=c(TRUE,FALSE),
-          scale='row',
-          main ="Lipid Differences MCM vs Control All Lines")
-
-```
 
 ## Eto vs Control N215
 
@@ -1259,7 +1177,7 @@ heatmap.2(diffLipids_mcm_n215,
 dev.off()
 
 png(file = "plots/heatmap_DEL_mcm_vs_control_n215.png")
-heatmap.2(diffLipids_mcm_215, 
+heatmap.2(diffLipids_mcm_n215, 
           Rowv = as.dendrogram(clustRows), 
           Colv = as.dendrogram(clustColumns),
           RowSideColors = module.color,
@@ -1295,7 +1213,7 @@ heatmaply(diffLipids_mcm_n215,
           ColSideColors = module.color_col,
           showticklabels=c(TRUE,FALSE),
           scale='row',
-          main ="Lipid Differences Eto vs Control N215")
+          main ="Lipid Differences MCM vs Control N215")
 
 ```
 
@@ -1343,7 +1261,7 @@ heatmap.2(diffLipids_eto_n253,
 dev.off()
 
 png(file = "plots/heatmap_DEL_eto_vs_control_n253.png")
-heatmap.2(diffLipids_eto_253, 
+heatmap.2(diffLipids_eto_n253, 
           Rowv = as.dendrogram(clustRows), 
           Colv = as.dendrogram(clustColumns),
           RowSideColors = module.color,
@@ -1373,89 +1291,6 @@ dev.off()
 ```{r heatmaply DELs eto n253}
 
 heatmaply(diffLipids_eto_n253, 
-          colors = myheatcolors,
-          Rowv=as.dendrogram(clustRows),
-          RowSideColors=module.color,
-          ColSideColors = module.color_col,
-          showticklabels=c(TRUE,FALSE),
-          scale='row',
-          main ="Lipid Differences Eto vs Control N253")
-
-```
-
-## MCM vs Control N253
-
-```{r heatmap DEL mcm n253, results='hide'}
-myheatcolors <- rev(brewer.pal(name="RdBu", n=11))
-clustRows <- hclust(as.dist(1-cor(t(diffLipids_mcm_n253), method="pearson")), method="complete") 
-
-clustColumns <- hclust(as.dist(1-cor(diffLipids_mcm_n253, method="spearman")), method="complete")
-module.assign <- cutree(clustRows, k=2) #Important parametre
-module.color <- rainbow(length(unique(module.assign)), start=0.1, end=0.9) 
-module.color <- module.color[as.vector(module.assign)] 
-
-module.assign_col<-cutree(clustColumns, k=2) #Important parametre
-module.color_col <- rainbow(length(unique(module.assign_col)), start=0.1, end=0.9) 
-module.color_col <- module.color_col[as.vector(module.assign_col)]
-
-svg(file = "plots/heatmap_DEL_mcm_vs_control_n253.svg")
-heatmap.2(diffLipids_mcm_n253, 
-          Rowv = as.dendrogram(clustRows), 
-          Colv = as.dendrogram(clustColumns),
-          RowSideColors = module.color,
-          ColSideColors = module.color_col,
-          col = myheatcolors, 
-          scale = "row", 
-          labRow = NA,
-          density.info = "none", 
-          trace = "none",  
-          cexRow = 0.8,  # Adjust row label size
-          cexCol = 0.8,  # Adjust column label size
-          margins = c(10, 10),  # Increase margin size
-          keysize = 1.2,  # Adjust size of the color key
-          key.title = NA,  # Remove color key title
-          key.ylab = NULL,  # Remove color key y-axis label
-          key.xlab = "Z-Score",  # Add x-axis label to the color key
-          main = "Lipid Differences MCM vs Control N253",  # Add a main title
-          xlab = "Samples",  # Label for x-axis
-          ylab = "Lipids",  # Label for y-axis
-          mar = c(5, 4),  # Adjust plot margins
-          srtCol = 45,  # Rotate column labels for better readability
-          dendrogram = "both"  # Show both row and column dendrograms
-)
-dev.off()
-
-png(file = "plots/heatmap_DEL_mcm_vs_control_n253.png")
-heatmap.2(diffLipids_mcm_253, 
-          Rowv = as.dendrogram(clustRows), 
-          Colv = as.dendrogram(clustColumns),
-          RowSideColors = module.color,
-          ColSideColors = module.color_col,
-          col = myheatcolors, 
-          scale = "row", 
-          labRow = NA,
-          density.info = "none", 
-          trace = "none",  
-          cexRow = 0.8,  # Adjust row label size
-          cexCol = 0.8,  # Adjust column label size
-          margins = c(10, 10),  # Increase margin size
-          keysize = 1.2,  # Adjust size of the color key
-          key.title = NA,  # Remove color key title
-          key.ylab = NULL,  # Remove color key y-axis label
-          key.xlab = "Z-Score",  # Add x-axis label to the color key
-          main = "Lipid Differences MCM vs Control N253",  # Add a main title
-          xlab = "Samples",  # Label for x-axis
-          ylab = "Lipids",  # Label for y-axis
-          mar = c(5, 4),  # Adjust plot margins
-          srtCol = 45,  # Rotate column labels for better readability
-          dendrogram = "both"  # Show both row and column dendrograms
-)
-dev.off()
-```
-
-```{r heatmaply DELs mcm n253}
-
-heatmaply(diffLipids_mcm_n253, 
           colors = myheatcolors,
           Rowv=as.dendrogram(clustRows),
           RowSideColors=module.color,
